--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: #F2FBFE;
 }
 
@@ -27,7 +27,6 @@ h3 {
     border: 1px solid #24b6f7;
     border-radius: 9px;
 }
-/*Content Visuals*/
 
 nav {
     background: #24B6F7;
@@ -39,30 +38,33 @@ nav {
     nav > div#Navbar {
         display: flex;
         flex-direction: row;
+        align-items: center;
+        padding-top: 3%;
     }
     #NavLogo {
-        width: 5%;
+        max-width: 100%;
         height: auto;
         position: absolute;
         display: flex;
     }
-    #Navbar > div.left > p {
+    #Navbar > div.left > a {
         text-decoration: none;
         color: white;
         text-shadow: 0px 3px 6px #0000007C;
     }
         #Navbar > div.left {
             display: flex;
-            width: 40%;
+            width: 37%;
+            margin-left: 6%;
             align-items: center;
             justify-content: center;
             justify-content: space-evenly;
         }
-        #Navbar > div.left > p:hover {
+        #Navbar > div.left > a:hover {
             color: #003143;
             text-shadow: 0px 3px 6px #0000007C;
         }
-        #Navbar > div.right > p {
+        #Navbar > div.right > a {
             text-decoration: none;
             color: white;
             text-shadow: 0px 3px 6px #0000007C;
@@ -73,12 +75,12 @@ nav {
             align-items: center;
             justify-content: flex-end;
         }
-        #Navbar > div.right > p:hover {
+        #Navbar > div.right > a:hover {
             color: #003143;
             text-shadow: 0px 3px 6px #0000007C;
         }
 
-main {/*aspect ratio on both pages*/
+main {
     background-image: linear-gradient(to bottom, #24B6F7, #24B6F7, #D0EFFD, #F2FBFE);
     background-size: cover;
     display: flex;
@@ -93,6 +95,7 @@ main {/*aspect ratio on both pages*/
         flex-direction: row;
         margin-top: 5%;
         justify-content: space-evenly;
+        align-items: center;
     }
     main > div.heroImg > div#MainImg {
         display: flex;
@@ -103,7 +106,8 @@ main {/*aspect ratio on both pages*/
     main > div.heroImg > div#MainImg > img#MyImage {
         display: flex;
         flex-basis: 100%;
-        height: 100%;
+        max-width: 100%;
+        height: auto;
     }
     main > div.heroImg > div.content {
         display: flex;
@@ -115,15 +119,29 @@ main {/*aspect ratio on both pages*/
     main > div.heroImg > div.content > h3 {
         text-align: right;
         display: flex;
+        order: 3;
+     }
+     main > div.heroImg > div.content > h2 {
+        text-align: right;
+        display: flex;
+        order: 1;
+     }
+     main > div.heroImg > div.content > h1 {
+        text-align: right;
+        display: flex;
+        order: 2;
      }
     main > div.heroImg > div.content > p {
         text-align: right;
         line-height: 1.3;
         display: flex;
+        order: 4;
     }
-    main > div.heroImg > div.content > button {
+    main > div.heroImg > div.content > button#button {
         margin-top: 5%;
         display: flex;
+        justify-content: flex-end;
+        order: 5;
     }
     main > img#Img {
         display: flex;
@@ -131,6 +149,8 @@ main {/*aspect ratio on both pages*/
         text-align: center;
         margin-top: 10%;
         margin-bottom: 10%;
+        max-width: 100%;
+        height: auto;
     }
 
 
@@ -146,13 +166,14 @@ section.MyWork {
         display: flex;
         flex-direction: row;
         flex-basis: 100%;
-        justify-content: space-between;
+        justify-content: space-evenly;
     }
     section.MyWork > div#row > div.Work {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         flex-basis: 30%;
+        margin-right: 10%;
     }
     section.MyWork > div#row > div.Work > p {  
             text-align: left; 
@@ -163,18 +184,19 @@ section.MyWork {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        flex-basis: 50%;
+        margin-left: 10%;
     }
-        #Work {
+        img#Work {
             display: flex;
-            min-width: 309px;
-            min-height: 111px;
             flex-basis: 100%;
             height: 100%;
-            /*figure out what to put here*/
         }
         div.container_01 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.container_01:hover {
             content: url("#")
@@ -182,6 +204,8 @@ section.MyWork {
         div.container_02 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.container_02:hover {
                 content: url("#")
@@ -189,6 +213,8 @@ section.MyWork {
         div.container_03 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.container_03:hover {
                 content: url("#")
@@ -196,6 +222,8 @@ section.MyWork {
         div.container_04 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
         /*div.container_04:hover {
             content: url("#")
@@ -220,13 +248,15 @@ section.MyDesign {
     section.MyDesign > div#row {
         display: flex;
         flex-direction: row;
-        width: 100%;
+        flex-basis: 100%;
+        height: auto;
     }
     section.MyDesign > div#row > div.Design {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         flex-basis: 30%;
+        margin-right: 3%;
     }
     section.MyDesign > div#row > div.Design > p {
         text-align: left;
@@ -237,15 +267,25 @@ section.MyDesign {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        flex-basis: 70%;
+        flex-basis: 67%;
     }
+        img#Design {
+            display: flex;
+            flex-basis: 100%;
+            max-width: 100%;
+            height: 100%;
+        }
         div#row > div.designOptions > div.column { 
             display: flex;
-            flex-direction: column; 
+            flex-direction: column;
+            flex-basis: 45%;
+            margin-right: 5%; 
         }
         div.flex-container_01 {
            display: flex;
            margin-bottom: 10%;
+           flex-basis: 100%;
+           height: auto;
         }
             /*div.flex-container_01:hover {
                content: url("images/CaseStudyOneHover.png")
@@ -253,6 +293,8 @@ section.MyDesign {
         div.flex-container_02 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.flex-container_02:hover {
                 content: url("images/CaseStudyTwoHover.png")
@@ -260,6 +302,8 @@ section.MyDesign {
         div.flex-container_03 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.flex-container_03:hover {
                 content: url("images/CaseStudyThreeHover.png")
@@ -267,6 +311,8 @@ section.MyDesign {
         div.flex-container_04 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.flex-container_04:hover {
                 content: url("images/CaseStudyFourHover.png")
@@ -274,6 +320,8 @@ section.MyDesign {
         div.flex-container_05 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.flex-container_05:hover {
                 content: url("images/CaseStudyFourHover.png")
@@ -281,6 +329,8 @@ section.MyDesign {
         div.flex-container_06 {
             display: flex;
             margin-bottom: 10%;
+            flex-basis: 100%;
+            height: auto;
         }
             /*div.flex-container_06:hover {
                 content: url("images/CaseStudyFourHover.png")
@@ -292,6 +342,7 @@ section.MyDesign {
 section.MyContact {
     display: flex;
     margin: auto;
+    margin-top: 10%;
     width: 90%;
     padding-left: 5%;
     padding-right: 5%;
@@ -317,6 +368,8 @@ section.MyContact {
         width: 15%;
         height: auto;
         vertical-align: middle;
+        max-width: 100%;
+        height: auto;
     }
     #italic {
        font-style: italic; 
@@ -348,6 +401,7 @@ footer {
         padding-left: 5%;
         padding-right: 5%;
         align-items: flex-end;
+        padding-bottom: 3%;
     }
         footer > div.footerLogo {
             display: flex;
@@ -374,7 +428,7 @@ footer {
             flex-direction: column;
             flex-basis: 30%;
         }
-        footer > div#footercolumn > div.top > p {
+        footer > div#footercolumn > div.top > a {
             text-decoration: none;
             color: white;
             text-shadow: 0px 3px 6px #0000007C;
@@ -384,11 +438,11 @@ footer {
             justify-content: flex-end;
             justify-content: space-between;
         }
-        footer > div#footercolumn > div.top > p:hover {
+        footer > div#footercolumn > div.top > a:hover {
             color: #003143;
             text-shadow: 0px 3px 6px #0000007C;
         }
-        footer > div#footercolumn > div.bottom > p {
+        footer > div#footercolumn > div.bottom > a {
             text-decoration: none;
             color: white;
             text-shadow: 0px 3px 6px #0000007C;
@@ -400,7 +454,120 @@ footer {
             margin-left: 10%;
             margin-right: 10%;
         }
-        footer > div#footercolumn > div.bottom > p:hover {
+        footer > div#footercolumn > div.bottom > a:hover {
             color: #003143;
             text-shadow: 0px 3px 6px #0000007C;
         }
+
+@media only screen and (max-width: 600px) {
+    /*mobile - rewrite widths */ 
+    /*Font Sizes*/
+    p {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+    }
+    h1 {
+        font-size: 22px;
+        text-align: center;
+    }
+    h2 {
+        font-size: 20px;
+        text-align: center;
+    }
+    h3 {
+        font-size: 16px;
+        text-align: center;
+    }
+    /*IMAGES*/
+    img#NavLogo {
+        max-width: 70%;
+        height: auto;
+        display: flex;
+        position: absolute;
+    }
+    img#MyImage {
+        max-width: 63%;
+        height: auto;
+        display: flex;
+    }
+    img#Img {
+        max-width: 50%;
+        height: auto;
+        display: flex;
+        margin: auto;
+        text-align: center;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+    img#Work {
+        display: flex;
+        height: auto;
+        max-width: 50%;
+    }
+    img#Design {
+        display: flex;
+        height: auto;
+        max-width: 54%;
+    }
+    img#contact {
+        width: 15%;
+        max-width: 36%;
+        height: auto;
+        vertical-align: middle;
+    }
+    img#FootLogo {
+        width: 30%;
+        max-width: 53%;
+        height: auto;
+        display: flex;
+    }
+    /*FLEX-CONTAINERS*/
+    nav > div#Navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 3%;
+    }
+    main > div.heroImg {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5%;
+        justify-content: space-evenly;
+    } 
+    section.MyWork > div#row {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 100%;
+        justify-content: space-evenly;
+    }
+    section.MyDesign > div#row {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 100%;
+        height: auto;
+    }   
+    section.MyDesign > div#row > div.designOptions {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        flex-basis: 67%;
+    }
+    section.MyContact > div#row {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 100%;
+    }
+    footer {
+        background: #24B6F7;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: auto;
+        width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
+        align-items: flex-end;
+        padding-bottom: 3%;
+    }
+}
